rajout des directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,7 @@ un evenement user   -->
 <p>{{number}}</p>
 <!-- dans le angular.cli mettre bootsrap après style.css -->
 <button class="btn btn-primary" (click)="onNewNumber()"> Clicker pour afficher un nombre </button>
+<hr>
+<app-cart-component></app-cart-component>
 
 
