binding et mis en place des roots app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,19 @@ un evenement user   -->
 <hr>
 <p>{{number}}</p>
 <!-- dans le angular.cli mettre bootsrap après style.css -->
-<button class="btn btn-primary" (click)="onNewNumber()"> Clicker pour afficher un nombre </button>
+<button class="btn btn-primary" (click)="onNewNumber()"> Cliquer pour afficher un nombre </button>
 <hr>
 <app-cart-component></app-cart-component>
+
+<hr>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+        <app-tabs></app-tabs>
+    </div>
+  </div>
+
+</div>
+
 
 
