--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,3 +1,5 @@
-<p>
-  item works!
-</p>
+    <li class="list-group-item">{{character.name}}</li>
+    <div>
+     <button class="btn btn-primary">Light</button>
+     <button class="btn btn-danger">Dark</button>
+  </div>
