--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,16 +1,14 @@
 <div>
-<ul class="nav">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </li>
-</ul>
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link" (click)="onChoose('all')" style="cursor: pointer; color: green" >All</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Light</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Dark</a>
+    </li>
+  </ul>
+  <app-list [characters]="getCharacters()"></app-list>
 </div>
