ajout form, ngModel et ngClass validaiton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,12 +17,18 @@ un evenement user   -->
 <hr>
 <div class="container">
   <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        <app-create></app-create>
+      </div>
+    </div>
+    <hr>
+  <div class="row">
     <div class="col-xs-12">
         <app-tabs></app-tabs>
     </div>
   </div>
-
 </div>
+
 
 
 
