--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,14 +1,15 @@
 <!-- # permet d'avoir accès à chaque infos du template -->
 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
 <div class="form-group">
-  <label for="name">Name</label>
-  <input type="text" id="name" name="name" class="form-control" ngModel required>
+  <label for="name">Nom</label>
+  <input type="text" id="name" name="name" class="form-control" ngModel required #nameCtrl="ngModel">
+  <span *ngIf="nameCtrl.invalid  && nameCtrl.touched" class="help-block">Veuillez indiquez un nom</span>
 </div>
 <div class="form-group">
-  <label for="side">Side</label>
+  <label for="side">Côté</label>
   <select id="side" name="side" class="form-control" ngModel>
     <option *ngFor="let option of availableSides" [value]="option.value">{{option.display}}</option>
   </select>
 </div>
-<button class="btn btn-primary" type="submit">Ajout d'un personnage</button>
+<button class="btn btn-primary" type="submit" [disabled]="form.invalid">Ajout d'un personnage</button>
 </form>
