--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,8 @@
+
+.container-header{
+  padding: 20px
+}
 .container{
-  padding: 20px;
-  border: 1px solid grey;
-  border-radius: 5px;
+  margin: 20px;
+  /* padding: 20px;*/
 }
