--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <ul class="nav nav-tabs">
     <li class="nav-item" >
       <a class="nav-link" [ngClass]="{active: chosenList === 'all'}" (click)="onChoose('all')" style="cursor: pointer">All</a>
@@ -11,4 +11,20 @@
     </li>
   </ul>
   <app-list [characters]="getCharacters()" (sideAssigned)="onSideChosen($event)"></app-list>
+</div>
+ -->
+<div>
+  <ul class="nav nav-tabs">
+    <li class="nav-item" routerLinkActive="active" >
+      <a class="nav-link" routerLink="/personnage/all" >All</a>
+    </li>
+    <li class="nav-item" routerLinkActive="active" >
+      <a class="nav-link" routerLink="/personnage/light" >Light</a>
+    </li>
+    <li class="nav-item" routerLinkActive="active" >
+      <a class="nav-link" routerLink="/personnage/dark" >Dark</a>
+    </li>
+  </ul>
+  <router-outlet></router-outlet>
+ <!--  <app-list [characters]="getCharacters()" (sideAssigned)="onSideChosen($event)"></app-list> -->
 </div>
